--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ai": "^3.3.0",
     "davinci-contest": "file:",
+    "dotenv": "^16.4.7",
     "flowbite-react": "^0.10.2",
     "next": "15.1.6",
+    "openai": "^4.54.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/react": "19.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
